--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <img src="https://cdn-icons.flaticon.com/png/512/5130/premium/5130142.png?token=exp=1655316339~hmac=8eb35116eeccc622a96c830092d7e55e"
+    <img src="https://github.com/cosmoart/cosmoart/blob/main/assets/image.png"
         alt="Work in progress">
     <a href="https://www.flaticon.com/free-icons/work-in-progress" title="work in progress icons">Work in progress icons
         created by Freepik - Flaticon</a>
