--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <img src="https://github.com/cosmoart/cosmoart/blob/main/assets/image.png"
+    <img src="https://github.com/cosmoart/cosmoart/blob/main/assets/image.png?raw=true"
         alt="Work in progress">
     <a href="https://www.flaticon.com/free-icons/work-in-progress" title="work in progress icons">Work in progress icons
         created by Freepik - Flaticon</a>
